# scripts

./: .gitignore  README.md  scripts.code-workspace
android/xueqiuCookie/: settings.gradle.kts
api/ai/: chat.aliyun-deepseek-r1-qwen-1.5b.http  chat.glm-4-flash-250414.http  chat.glm-4.5-flash.http  chat.glm-4.6v-flash.http  chat.glm-4.7.http  chat.hunyuan-lite.http  chat.hunyuan-turbo.http  chat.spark-lite.http
api/bjxd/: .env.example  getScoreDetails.http  getUserInfo.http
api/qinglong/: .env.example  auth.http  envs.http
api/stock_xueqiu/: .env.example  minute_5d.http
dotnet/: .gitattributes  .gitignore
dotnet/AutoRun/: AGENTS.md  AutoRunManager.slnx  Directory.Build.props
python/: scrcpy.py
python/auto_run/: auto_run_manager.py  create_task_scheduler.py
python/bjxd_getToken/: main.py  pyproject.toml
python/carwith_dexkit/: README.md  main.py  pyproject.toml
python/process_pause/: build.bat  main.py  pyproject.toml  run.py
python/queens_sudoku/: README.md  adb.py  main.py  pyproject.toml  run.bat
python/scrcpy/: main.py  pyproject.toml  run.py
python/stock_save/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  generate_1min_data.py  index.html  pyproject.toml  rebuild.sh  run.ps1  run.sh  server.py  start.sh  stock_save_minute.py  supervisord.conf
python/stock_save/src/: __main__.py
python/stock_save/src/stock_save/: __main__.py  cli.py  config.py  logger.py  models.py  notification.py  xueqiu.py
python/stock_save/src/stock_save/web/: app.py  routes.py
python/stock_save/src/stock_save/web/templates/: base.html.jinja  chart.html.jinja  cookie.html.jinja  index.html.jinja
python/sublime_crack/: README.md  main.py  pyproject.toml
python/tinypng/: .env.example  README.md  pyproject.toml
python/tinypng/src/tinypng/: __main__.py
python/xueqiu_getCookie/: README.md  main.py  pyproject.toml
qinglong/: .env.example  binmt_cc.py  bjxd.py  bjxd_get_token_gui.py  iptv_cc.py  oshwhub.py  oshwhub_get_cookie_gui.py
qinglong/api_ai_chat/: .env.example  chat.glm-4-flash-250414.http  (+1 more)
shell/: armbian.sh
tampermonkey/: github_datatime_format.user.js
(+83 files in other folders)
