[project]
name = "stock-save"
version = "0.2.0"
description = "股票分钟线数据保存 & Web 展示服务"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_save"]

[project.scripts]
cli = "stock_save.cli:main"
web = "stock_save.web.app:run"
web-dev = "stock_save.web.app:run_dev"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
