[project]
name = "tinypng"
version = "0.1.0"
description = "Batch compress PNG images using TinyPNG API"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "tinify>=1.7.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "ty>=0.0.48",
]

[project.scripts]
tinypng = "tinypng.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinypng"]

[tool.uv]
managed = true

[tool.ty.environment]
python = ".venv"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W", "F", # 标准
    "I", # 导入
    "UP", "RUF", # 代码现代化
    "B", "BLE", "T10", # Bug
    "SIM", "C4", "PERF", "PIE", # 简化与性能
    "N", # 命名
    "PTH", # 路径
    # "ASYNC", # 异步（如项目用 asyncio 则保留，否则删掉）
    "PT", # 测试
    "TRY", # 异常
]
ignore = [
    "E501",
    "TRY003",
]
fixable = ["ALL"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
docstring-code-format = true
